# ECE4250-Project

./: .cproject  .gitignore  .project  Aesthetics.cpp  Aesthetics.hpp  CMakeLists.txt  DisplayImage.cpp  KMeansCluster.cpp  KMeansCluster.hpp  Makefile  ROTAverage.cpp  ROTAverage.hpp  Sizer.cpp  Sizer.hpp  Transforms.cpp  Transforms.h  Transforms.hpp  descript.cpp  predict.cpp  serialize_mat.hpp  train.cpp  train.hpp
